# DoorPhone

./: .gitignore
ClientPC/: CMakeLists.txt  deleted_code.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  popup.cpp  popup.h  popup.ui  res.qrc  server.cpp  server.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  udpnet.cpp  udpnet.h  udpphone.cpp  udpphone.h
ClientPC/qss/: mainStyle.css
Panel/: CMakeLists.txt  callplayer.cpp  callplayer.h  main.cpp  mainwindow.cpp  mainwindow.cpp.CvpniQ  mainwindow.cpp.NCVeNg  mainwindow.h  mainwindow.ui  oldFunc.txt  phone.cpp  phone.h  pins.cpp  pins.h  server.cpp  server.h  src.qrc  udpnet.cpp  udpnet.h  udpphone.cpp  udpphone.h
Server/: CMakeLists.txt  callplayer.cpp  callplayer.h  doorphone.cpp  doorphone.h  main.cpp  phoneHandler.cpp  phoneHandler.h  pins.cpp  pins.h  server.cpp  server.h  tcpHandler.cpp  tcpHandler.h  tcpclass.cpp  tcpclass.h  threadclass1.cpp  threadclass1.h  threadclass2.cpp  threadclass2.h  udpphone.cpp
